working 90 minutes 930 first

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
-host/venv/
-target/venv/
+host/venv
+target/venv
 target/.pytest_cache/
-host/results/*
+host/results
 host/logs/*
-host/deactivate/
-Python-3.9.1/
+host/deactivate
+Python-3.9.1
 Python-3.9.1.tgz
 host/state
+host/utils/logs
+host/uartLogger/venv
+host/utilis/venv
+host/utilis/logs_power_button
